--- a/View/frontend/layout/helloworld_page_index.xml
+++ b/View/frontend/layout/helloworld_page_index.xml
@@ -2,7 +2,7 @@
 <page layout="1column" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
 <body>
     <referenceContainer name="content">
-        <block class="Magento\Framework\View\Element\Template" name="dhruvi_page_index"  template="Dhruvi_HelloWorld::helloworld.phtml"/>
+        <block class="Magento\Framework\View\Element\Template" name="helloworld_page_index"  template="Dhruvi_HelloWorld::helloworld.phtml"/>
 
         </referenceContainer>
 </body>    
